--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_few_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_few_keywords.1.html
@@ -269,6 +269,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -277,6 +279,8 @@
                         <div class="unknown" title="No build information available for watchOS"></div>
                         <div class="unknown" title="No build information available for tvOS"></div>
                         <div class="unknown" title="No build information available for Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                     <li class="row">
@@ -292,6 +296,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -300,6 +306,8 @@
                         <div class="unknown" title="No build information available for watchOS"></div>
                         <div class="compatible" title="Built successfully with tvOS"></div>
                         <div class="compatible" title="Built successfully with Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                     <li class="row">
@@ -315,6 +323,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -323,6 +333,8 @@
                         <div class="compatible" title="Built successfully with watchOS"></div>
                         <div class="compatible" title="Built successfully with tvOS"></div>
                         <div class="compatible" title="Built successfully with Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                   </ul>
