--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_withPackageFundingLinks.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_withPackageFundingLinks.1.html
@@ -246,6 +246,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -254,6 +256,8 @@
                         <div class="unknown" title="No build information available for watchOS"></div>
                         <div class="unknown" title="No build information available for tvOS"></div>
                         <div class="unknown" title="No build information available for Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                     <li class="row">
@@ -269,6 +273,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -277,6 +283,8 @@
                         <div class="unknown" title="No build information available for watchOS"></div>
                         <div class="compatible" title="Built successfully with tvOS"></div>
                         <div class="compatible" title="Built successfully with Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                     <li class="row">
@@ -292,6 +300,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -300,6 +310,8 @@
                         <div class="compatible" title="Built successfully with watchOS"></div>
                         <div class="compatible" title="Built successfully with tvOS"></div>
                         <div class="compatible" title="Built successfully with Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                   </ul>
