--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BuildIndex_document.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/BuildIndex_document.1.html
@@ -11,9 +11,9 @@
     <title>foobar &ndash; Build Results &ndash; Swift Package Index</title>
     <meta name="twitter:title" content="foobar &ndash; Build Results &ndash; Swift Package Index"/>
     <meta property="og:title" content="foobar &ndash; Build Results &ndash; Swift Package Index"/>
-    <meta name="description" content="The latest compatibility build results for foobar, showing compatibility across 7 platforms with 4 versions of Swift."/>
-    <meta name="twitter:description" content="The latest compatibility build results for foobar, showing compatibility across 7 platforms with 4 versions of Swift."/>
-    <meta property="og:description" content="The latest compatibility build results for foobar, showing compatibility across 7 platforms with 4 versions of Swift."/>
+    <meta name="description" content="The latest compatibility build results for foobar, showing compatibility across 9 platforms with 4 versions of Swift."/>
+    <meta name="twitter:description" content="The latest compatibility build results for foobar, showing compatibility across 9 platforms with 4 versions of Swift."/>
+    <meta property="og:description" content="The latest compatibility build results for foobar, showing compatibility across 9 platforms with 4 versions of Swift."/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="http://localhost:8080/images/logo.png"/>
     <meta property="og:image" content="http://localhost:8080/images/logo.png"/>
@@ -271,6 +271,60 @@
             <li class="row">
               <div class="row-labels">
                 <strong>Linux</strong>
+              </div>
+              <div class="column-labels">
+                <div>
+                  <span class="stable">1.2.3</span>
+                </div>
+                <div>
+                  <span class="branch">main</span>
+                </div>
+                <div>
+                  <span class="beta">2.0.0-b1</span>
+                </div>
+              </div>
+              <div class="results">
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
+                </div>
+              </div>
+            </li>
+            <li class="row">
+              <div class="row-labels">
+                <strong>Wasm</strong>
+              </div>
+              <div class="column-labels">
+                <div>
+                  <span class="stable">1.2.3</span>
+                </div>
+                <div>
+                  <span class="branch">main</span>
+                </div>
+                <div>
+                  <span class="beta">2.0.0-b1</span>
+                </div>
+              </div>
+              <div class="results">
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
+                </div>
+                <div>
+                  <span>Pending</span>
+                </div>
+              </div>
+            </li>
+            <li class="row">
+              <div class="row-labels">
+                <strong>Android</strong>
               </div>
               <div class="column-labels">
                 <div>
