--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_binary_targets.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_binary_targets.1.html
@@ -242,6 +242,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -250,6 +252,8 @@
                         <div class="unknown" title="No build information available for watchOS"></div>
                         <div class="unknown" title="No build information available for tvOS"></div>
                         <div class="unknown" title="No build information available for Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                     <li class="row">
@@ -265,6 +269,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -273,6 +279,8 @@
                         <div class="unknown" title="No build information available for watchOS"></div>
                         <div class="compatible" title="Built successfully with tvOS"></div>
                         <div class="compatible" title="Built successfully with Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                     <li class="row">
@@ -288,6 +296,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -296,6 +306,8 @@
                         <div class="compatible" title="Built successfully with watchOS"></div>
                         <div class="compatible" title="Built successfully with tvOS"></div>
                         <div class="compatible" title="Built successfully with Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                   </ul>
