--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_no_authors_activity.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_no_authors_activity.1.html
@@ -233,6 +233,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -241,6 +243,8 @@
                         <div class="unknown" title="No build information available for watchOS"></div>
                         <div class="unknown" title="No build information available for tvOS"></div>
                         <div class="unknown" title="No build information available for Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                     <li class="row">
@@ -256,6 +260,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -264,6 +270,8 @@
                         <div class="unknown" title="No build information available for watchOS"></div>
                         <div class="compatible" title="Built successfully with tvOS"></div>
                         <div class="compatible" title="Built successfully with Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                     <li class="row">
@@ -279,6 +287,8 @@
                         <div>watchOS</div>
                         <div>tvOS</div>
                         <div>Linux</div>
+                        <div>Wasm</div>
+                        <div>Android</div>
                       </div>
                       <div class="results">
                         <div class="compatible" title="Built successfully with iOS"></div>
@@ -287,6 +297,8 @@
                         <div class="compatible" title="Built successfully with watchOS"></div>
                         <div class="compatible" title="Built successfully with tvOS"></div>
                         <div class="compatible" title="Built successfully with Linux"></div>
+                        <div class="unknown" title="No build information available for WebAssembly"></div>
+                        <div class="unknown" title="No build information available for Android"></div>
                       </div>
                     </li>
                   </ul>
